tests/errors/typeof_to_char_01.f90
program typeof_to_char_01
    implicit none
    character(:), allocatable :: s
    s = typeof(1)
end program typeof_to_char_01
